[package]
name = "scm_repr"
version = "0.1.0"
authors = ["mbilling <flkazemakase@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
dbwgc-sys = {path = "../dbwgc-sys"}

[dev-dependencies]
criterion = "0.3"


[[bench]]
name = "simple"
harness = false

[[bench]]
name = "faster_integers"
harness = false

[[bench]]
name = "cheaper_pairs"
harness = false
